# digit_recognition_test

./: .gitignore  CMakeLists.txt  rebuild.bat
src/: drawing_interface.cpp  drawing_interface.h  image_processor.cpp  image_processor.h  main.cpp  neural_network.cpp  neural_network.h
